--- a/www/index.html
+++ b/www/index.html
@@ -27,14 +27,23 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/routes.js"></script>
+
+    <script src="js/ui/ui.module.js"></script>
+    <script src="js/ui/controllers/menu.controller.js"></script>
+    
+    <script src="js/task/task.module.js"></script>
+    <script src="js/task/services/task.service.js"></script>
+    <script src="js/task/controllers/taskCreate.controller.js"></script>
+
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="todoApp">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
