Aggiunta feature di inserimento e display task

--- a/www/index.html
+++ b/www/index.html
@@ -28,10 +28,11 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="lib/angular-uuid/uuid.min.js"></script>
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
+    <script src="js/boot.js"></script>
     <script src="js/routes.js"></script>
 
     <script src="js/ui/ui.module.js"></script>
@@ -40,6 +41,10 @@
     <script src="js/task/task.module.js"></script>
     <script src="js/task/services/task.service.js"></script>
     <script src="js/task/controllers/taskCreate.controller.js"></script>
+    <script src="js/task/controllers/taskDetail.controller.js"></script>
+
+    <script src="js/shared/shared.module.js"></script>
+    <script src="js/shared/services/dbUtil.service.js"></script>
 
   </head>
 
